--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,9 +1,8 @@
 [server]
 domain = www.ubssdic.com
+[info]
 url = /main/products/fundproduct/121011/fundgk.shtml
 encode = 0
-[tags]
-selected = div,table,tr,tbody,td
-data_list = div/div/div/div/table/tr/td
-[data]
-index=1,3,5,7,9,18
+selected_tags = div,table,tr,tbody,td
+data_list_tags = div/div/div/div/table/tr/td
+data_index=1,3,5,7,9,18
