--- a/Projects/Python/fund/config/06.ini
+++ b/Projects/Python/fund/config/06.ini
@@ -6,13 +6,12 @@ url = /main/products/pofund/519068/fundinfo.shtml
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = div/div/div/table/tr/td
-data_index = 1,2,3
+data_index = 1,2
 
 [manager]
 url = /main/products/pofund/519068/fundmanager.shtml 
 encode = 1 
 selected_tags = div,h3,p,table,tr,td
-#data_list_tags = div/div/div/div/div/div/h3,div/div/div/div/div/div,div/div/div/div/div/p/p,div/div/div/div/div/div/div/table/tr/td
 data_list_tags = div/div/div/div/div/div/h3,div/div/div/div/div/p/p
 data_index = 7,8,9
 
@@ -26,5 +25,5 @@ target_fields=
 selected_tags = table,tr,td
 data_list_tags = table/tr/td
 start_index = 3
-interval = 3
-end_index = 0
+field_count = 3
+data_index = 0,1,2
