--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -6,7 +6,7 @@ url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
-data_index = 2,4,6,8,10
+data_index = 1,3,5,7,9
 
 [manager]
 url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_0500%2002&fundCode=050002&fundType=0
@@ -23,3 +23,50 @@ target_fields=
 [nav_json]
 data_node = records
 source_fields= closeprice,totalnetvalue,netvalueper,totalpricevalue,assetvalue,netdate,pricevalue
+
+[invest]
+url = /jjcp/kf/tzzh/index.jsp?0.9258281689899641&investDate=2012-06-30&classid=000200020003_FUND_OPEN_1101_050002&fundCode=050002&fundType=0 
+encode = 0
+data_tag_depth = table,table
+data_tag = table
+data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
+
+[invest_overall]
+table_index = 0
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 2
+field_count = 2
+data_index = 0,1
+
+[invest_stock_summary]
+table_index = 1
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 3
+field_count = 3
+data_index = 0,1,2
+
+[invest_stock_top]
+table_index = 2
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 4
+field_count = 4 
+data_index = 0,1,2,3
+
+[invest_bond_summary]
+table_index = 3
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 3
+field_count = 3
+data_index = 0,1,2
+
+[invest_bond_top]
+table_index = 4
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 3
+field_count = 3
+data_index = 0,1,2
