--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -6,3 +6,71 @@ encode = 0
 selected_tags = div,table,tr,tbody,td
 data_list_tags = div/div/div/div/table/tr/td
 data_index=1,3,5,7,9,18
+
+[manager]
+url = /main/products/fundproduct/121012/fundmanager.shtml?method=1350524379619
+encode = 0 
+selected_tags = div, table, tr, tbody, td
+data_list_tags = div/div/div/div
+data_index = 2,4,6,7,8,9,10 
+
+[nav]
+url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid=121012&startdate=&enddate=&currentPage=1&numPerPage=10000 
+encode = 0
+data_type = html
+target_fields=
+
+[nav_html]
+selected_tags = table,tr,td
+data_list_tags = table/tr/td
+start_index = 3
+field_count = 4
+data_index = 0,1,2,3
+
+[invest]
+url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid=121012&param=2011%2525E5%2525B9%2525B4%2C3%2C129
+encode = 0
+data_tag_depth = table
+data_tag = table
+data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
+#data_nodes = stock_top
+
+[invest_overall]
+table_index = 0
+selected_tags = table,tr,tbody,td,p,span
+data_list_tags = table/tbody/tr/td/p/span/span/span/span
+start_index = 4
+field_count = 4 
+data_index = 0,1,2,3
+
+[invest_stock_summary]
+table_index = 1
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tbody/tr/td
+start_index = 4
+field_count = 4 
+data_index = 0,1,2,3
+
+[invest_stock_top]
+table_index = 2
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tbody/tr/td
+start_index = 6
+field_count =  6
+data_index = 0,1,2,3,4,5
+
+[invest_bond_summary]
+table_index = 3
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tbody/tr/td
+start_index = 4 
+field_count = 4 
+data_index = 0,1,2,3
+
+[invest_bond_top]
+table_index = 4
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tbody/tr/td
+start_index = 6 
+field_count = 6 
+data_index = 0,1,2,3,4,5
