--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,6 +1,18 @@
 [server]
 domain = www.bosera.com
 
+[home]
+url = /fund/jijinchanpin.html
+encode = 1
+tag_depth = table,table,table
+tag_depth_index = 0,0,0
+data_tag = table
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 3
+field_count = 3
+data_index = 0,1,2
+
 [info]
 url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_050002&fundCode=050002&fundType=0 
 encode = 1 
@@ -27,7 +39,8 @@ source_fields= closeprice,totalnetvalue,netvalueper,totalpricevalue,assetvalue,n
 [invest]
 url = /jjcp/kf/tzzh/index.jsp?0.9258281689899641&investDate=2012-06-30&classid=000200020003_FUND_OPEN_1101_050002&fundCode=050002&fundType=0 
 encode = 0
-data_tag_depth = table,table
+tag_depth = table,table
+tag_depth_index = 0,0
 data_tag = table
 data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
 
@@ -35,7 +48,7 @@ data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
 table_index = 0
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
-start_index = 2
+start_index = 0
 field_count = 2
 data_index = 0,1
 
