--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,5 +1,10 @@
 [server]
 domain = www.ubssdic.com
+
+[home]
+url = /main/products/fundproduct/index.shtml
+encode = 0
+
 [info]
 url = /main/products/fundproduct/121011/fundgk.shtml
 encode = 0
@@ -30,7 +35,8 @@ data_index = 0,1,2,3
 [invest]
 url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid=121012&param=2011%2525E5%2525B9%2525B4%2C3%2C129
 encode = 0
-data_tag_depth = table
+tag_depth = table
+tag_depth_index = 0
 data_tag = table
 data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
 #data_nodes = stock_top
