--- a/Projects/Python/fund/config/06.ini
+++ b/Projects/Python/fund/config/06.ini
@@ -1,6 +1,15 @@
 [server]
 domain = www.htffund.com
 
+[home]
+url = /main/products/index.shtml 
+encode = 1 
+selected_tags = table,tr,td,div
+data_list_tags = table/tr/td
+start_index = 11 
+field_count = 11
+data_index = 1
+
 [info]
 url = /main/products/pofund/519068/fundinfo.shtml
 encode = 1 
@@ -31,10 +40,10 @@ data_index = 0,1,2
 [invest]
 url=http://www.htffund.com/cgi-bin/fundproduct/FundProductAction?function=AjaxChangeReport&_=1350526315987&fundid=519068&date=2012-03-31&reqUrl=%2Fcgi-bin%2Ffundproduct%2FFundProductAction%3Ffunction%3DAjaxChangeReport
 encode = 1
-data_tag_depth =
+tag_depth =
+tag_depth_index=
 data_tag = table
 data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
-#data_nodes = stock_top
 
 [invest_overall]
 table_index = 0
@@ -48,7 +57,7 @@ data_index = 0,1,2,3
 table_index = 1
 selected_tags = table,tr,td
 data_list_tags = table/tr/td
-start_index = 4
+start_index = 0
 field_count = 4 
 data_index = 0,1,2,3
 
@@ -56,7 +65,7 @@ data_index = 0,1,2,3
 table_index = 2
 selected_tags = table,tr,td
 data_list_tags = table/tr/td
-start_index = 6
+start_index = 0
 field_count =  6
 data_index = 0,1,2,3,4,5
 
@@ -64,7 +73,7 @@ data_index = 0,1,2,3,4,5
 table_index = 3
 selected_tags = table,tr,td
 data_list_tags = table/tr/td
-start_index = 4 
+start_index = 0
 field_count = 4 
 data_index = 0,1,2,3
 
@@ -72,6 +81,6 @@ data_index = 0,1,2,3
 table_index = 4
 selected_tags = table,tr,td
 data_list_tags = table/tr/td
-start_index = 6 
+start_index = 0
 field_count = 6 
 data_index = 0,1,2,3,4,5
