--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -2,33 +2,34 @@
 domain = www.bosera.com
 
 [home]
-url = /fund/jijinchanpin.html
+url = /fund/jijinchanpin.html 
 encode = 1
-tag_depth = table,table,table
-tag_depth_index = 0,0,0
 data_tag = table
+property_name = class
+property_value = stripeTbl 
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
-start_index = 3
-field_count = 3
+start_index = 0
+field_count = 11
+table_index = 1
 data_index = 0,1,2
 
 [info]
-url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_050002&fundCode=050002&fundType=0 
+url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_050002&fundCode=%s&fundType=0 
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
 data_index = 1,3,5,7,9
 
 [manager]
-url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_0500%2002&fundCode=050002&fundType=0
+url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode=%s&fundType=0
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
 data_index = 0,1
 
 [nav]
-url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=0&order=netdate&sort=1&fundCode=050002&startDt=2003-08-25&endDt=2012-10-17
+url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=0&order=netdate&sort=1&fundCode=%s&startDt=2003-08-25&endDt=2012-10-17
 encode = 0
 data_type = json
 target_fields=
@@ -37,11 +38,11 @@ data_node = records
 source_fields= closeprice,totalnetvalue,netvalueper,totalpricevalue,assetvalue,netdate,pricevalue
 
 [invest]
-url = /jjcp/kf/tzzh/index.jsp?0.9258281689899641&investDate=2012-06-30&classid=000200020003_FUND_OPEN_1101_050002&fundCode=050002&fundType=0 
+url = /jjcp/kf/tzzh/index.jsp?0.9258281689899641&investDate=2012-06-30&classid=000200020003_FUND_OPEN_1101_050002&fundCode=%s&fundType=0 
 encode = 0
-tag_depth = table,table
-tag_depth_index = 0,0
 data_tag = table
+property_name = 
+property_value =  
 data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
 
 [invest_overall]
