--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -4,23 +4,33 @@ domain = www.ubssdic.com
 [home]
 url = /main/products/fundproduct/index.shtml
 encode = 0
+data_tag = div
+property_name = class
+property_value = plist_pics 
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 3
+field_count = 3
+data_index = 0,1,2
+
+
 
 [info]
-url = /main/products/fundproduct/121011/fundgk.shtml
+url = /main/products/fundproduct/%s/fundgk.shtml
 encode = 0
 selected_tags = div,table,tr,tbody,td
 data_list_tags = div/div/div/div/table/tr/td
 data_index=1,3,5,7,9,18
 
 [manager]
-url = /main/products/fundproduct/121012/fundmanager.shtml?method=1350524379619
+url = /main/products/fundproduct/%s/fundmanager.shtml?method=1350524379619
 encode = 0 
 selected_tags = div, table, tr, tbody, td
 data_list_tags = div/div/div/div
-data_index = 2,4,6,7,8,9,10 
+data_index = 2,4 
 
 [nav]
-url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid=121012&startdate=&enddate=&currentPage=1&numPerPage=10000 
+url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid=%s&startdate=&enddate=&currentPage=1&numPerPage=10000 
 encode = 0
 data_type = html
 target_fields=
@@ -33,13 +43,12 @@ field_count = 4
 data_index = 0,1,2,3
 
 [invest]
-url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid=121012&param=2011%2525E5%2525B9%2525B4%2C3%2C129
+url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid=%s&param=2011%2525E5%2525B9%2525B4%2C3%2C129
 encode = 0
-tag_depth = table
-tag_depth_index = 0
 data_tag = table
+property_name = 
+property_value =  
 data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
-#data_nodes = stock_top
 
 [invest_overall]
 table_index = 0
