--- a/Projects/Python/fund/config/06.ini
+++ b/Projects/Python/fund/config/06.ini
@@ -4,6 +4,15 @@ domain = www.htffund.com
 [home]
 url = /main/products/index.shtml 
 encode = 1 
+data_tag = table
+property_name = id
+property_value = tabFundData
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 3
+field_count = 3
+data_index = 0,1,2
+
 selected_tags = table,tr,td,div
 data_list_tags = table/tr/td
 start_index = 11 
@@ -40,9 +49,9 @@ data_index = 0,1,2
 [invest]
 url=http://www.htffund.com/cgi-bin/fundproduct/FundProductAction?function=AjaxChangeReport&_=1350526315987&fundid=519068&date=2012-03-31&reqUrl=%2Fcgi-bin%2Ffundproduct%2FFundProductAction%3Ffunction%3DAjaxChangeReport
 encode = 1
-tag_depth =
-tag_depth_index=
 data_tag = table
+property_name = 
+property_value = 
 data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
 
 [invest_overall]
