--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,5 +1,6 @@
 [server]
 domain = www.bosera.com
+nodes= info,manager,nav,invest 
 
 [home]
 url = /fund/jijinchanpin.html 
@@ -15,21 +16,21 @@ table_index = 1
 data_index = 0,1,2
 
 [info]
-url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_050002&fundCode=%s&fundType=0 
-encode = 1 
+url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_050002&fundCode={fund_code}&fundType=0 
+encode = 0
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
 data_index = 1,3,5,7,9
 
 [manager]
-url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode=%s&fundType=0
-encode = 1 
+url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode={fund_code}&fundType=0
+encode = 0 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
 data_index = 0,1
 
 [nav]
-url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=0&order=netdate&sort=1&fundCode=%s&startDt=2003-08-25&endDt=2012-10-17
+url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10000&order=netdate&sort=1&fundCode={fund_code}&startDt=2003-08-25&endDt=2012-10-17
 encode = 0
 data_type = json
 target_fields=
@@ -38,7 +39,7 @@ data_node = records
 source_fields= closeprice,totalnetvalue,netvalueper,totalpricevalue,assetvalue,netdate,pricevalue
 
 [invest]
-url = /jjcp/kf/tzzh/index.jsp?0.9258281689899641&investDate=2012-06-30&classid=000200020003_FUND_OPEN_1101_050002&fundCode=%s&fundType=0 
+url = /jjcp/kf/tzzh/index.jsp?0.9258281689899641&investDate=2012-06-30&fundCode={fund_code}&fundType=0&&param=2012%2525E5%2525B9%2525B4%2C1%2C197
 encode = 0
 data_tag = table
 property_name = 
