--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,5 +1,6 @@
 [server]
 domain = www.ubssdic.com
+nodes= info,manager,nav,invest 
 
 [home]
 url = /main/products/fundproduct/index.shtml
@@ -16,21 +17,21 @@ data_index = 0,1,2
 
 
 [info]
-url = /main/products/fundproduct/%s/fundgk.shtml
+url = /main/products/fundproduct/{fund_code}/fundgk.shtml
 encode = 0
 selected_tags = div,table,tr,tbody,td
 data_list_tags = div/div/div/div/table/tr/td
 data_index=1,3,5,7,9,18
 
 [manager]
-url = /main/products/fundproduct/%s/fundmanager.shtml?method=1350524379619
+url = /main/products/fundproduct/{fund_code}/fundmanager.shtml?method=1350524379619
 encode = 0 
 selected_tags = div, table, tr, tbody, td
 data_list_tags = div/div/div/div
 data_index = 2,4 
 
 [nav]
-url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid=%s&startdate=&enddate=&currentPage=1&numPerPage=10000 
+url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid={fund_code}&startdate=&enddate=&currentPage=1&numPerPage=10000 
 encode = 0
 data_type = html
 target_fields=
@@ -43,7 +44,7 @@ field_count = 4
 data_index = 0,1,2,3
 
 [invest]
-url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid=%s&param=2011%2525E5%2525B9%2525B4%2C3%2C129
+url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid={fund_code}&param=2011%2525E5%2525B9%2525B4%2C3%2C129
 encode = 0
 data_tag = table
 property_name = 
