--- a/Projects/Python/fund/config/06.ini
+++ b/Projects/Python/fund/config/06.ini
@@ -1,5 +1,6 @@
 [server]
 domain = www.htffund.com
+nodes= info,manager,nav,invest 
 
 [home]
 url = /main/products/index.shtml 
@@ -20,21 +21,21 @@ field_count = 11
 data_index = 1
 
 [info]
-url = /main/products/pofund/519068/fundinfo.shtml
+url = /main/products/pofund/{fund_code}/fundinfo.shtml
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = div/div/div/table/tr/td
 data_index = 1,2
 
 [manager]
-url = /main/products/pofund/519068/fundmanager.shtml 
+url = /main/products/pofund/{fund_code}/fundmanager.shtml 
 encode = 1 
 selected_tags = div,h3,p,table,tr,td
 data_list_tags = div/div/div/div/div/div/h3,div/div/div/div/div/p/p
 data_index = 7,8,9
 
 [nav]
-url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundTotalNav&fundid=519068&datetype=&startdate=&enddate=curPage=1&numPerPage=10200&rand=1350451511857 
+url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundTotalNav&fundid={fund_code}&datetype=&startdate=&enddate=curPage=1&numPerPage=10200&rand=1350451511857 
 encode = 0
 data_type = html
 target_fields=
@@ -47,7 +48,7 @@ field_count = 3
 data_index = 0,1,2
 
 [invest]
-url=http://www.htffund.com/cgi-bin/fundproduct/FundProductAction?function=AjaxChangeReport&_=1350526315987&fundid=519068&date=2012-03-31&reqUrl=%2Fcgi-bin%2Ffundproduct%2FFundProductAction%3Ffunction%3DAjaxChangeReport
+url=http://www.htffund.com/cgi-bin/fundproduct/FundProductAction?function=AjaxChangeReport&_=1350526315987&fundid={fund_code}&date=2012-03-31&reqUrl=%2Fcgi-bin%2Ffundproduct%2FFundProductAction%3Ffunction%3DAjaxChangeReport
 encode = 1
 data_tag = table
 property_name = 
