--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,6 +1,7 @@
 [server]
 domain = www.bosera.com
-nodes= info,manager,nav,invest 
+nodes= ROI
+#nodes= info,manager,nav,invest,bonus
 
 [home]
 url = /fund/jijinchanpin.html 
@@ -85,3 +86,29 @@ data_list_tags = table/tr/td
 start_index = 3
 field_count = 3
 data_index = 0,1,2
+
+[bonus]
+url = /jjcp/kf/fhxx/index.jsp?0.03408895768929732i&classid=000200020003_FUND_OPEN_1101_{fund_code}&fundCode={fund_code}&fundType=0
+encode = 1 
+property_name = class
+property_value = border_ccc_2
+data_tag = table
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 4
+field_count = 4 
+table_index = 0 
+data_index = 0,1,2
+
+[ROI]
+url = /jjcp/kf/tzhb/index.jsp?0.03408895768929732i&classid=000200020003_FUND_OPEN_1101_{fund_code}&fundCode={fund_code}&fundType=0
+encode = 1 
+property_name = class
+property_value = border_ccc_2
+data_tag = table
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 3
+field_count = 2 
+table_index = 0 
+data_index = 0,1
