--- a/Projects/Python/fund/config/06.ini
+++ b/Projects/Python/fund/config/06.ini
@@ -1,6 +1,7 @@
 [server]
 domain = www.htffund.com
-nodes= info,manager,nav,invest 
+nodes = consignee
+#nodes= info,manager,nav,invest 
 
 [home]
 url = /main/products/index.shtml 
@@ -93,4 +94,42 @@ selected_tags = table,tr,td
 data_list_tags = table/tr/td
 start_index = 0
 field_count = 6 
+data_index = 0,1,2,3,4,5
+
+[bonus]
+url = /main/products/pofund/{fund_code}/fundnav.shtml 
+encode = 0 
+property_name = class
+property_value = sharetable intervalbg
+data_tag = table
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 4
+field_count = 4 
+table_index = 0 
+data_index = 0,1,2,3
+
+[ROI]
+url = /main/products/pofund/{fund_code}/fundyield.shtml 
+encode = 0 
+property_name = class
+property_value = sharetable intervalbg
+data_tag = table
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td,table/tr/th
+start_index = 0 
+field_count = 10 
+table_index = 0 
+data_index = 0,1,2,3,4,5,6,7,8,9
+
+[consignee]
+url = /main/products/pofund/{fund_code}/fundseat.shtml 
+encode = 1 
+property_name = id
+property_value = idContainer2 
+data_tag = dl
+selected_tags = dl,dd,div 
+data_list_tags = dl/dd/div 
+start_index = 0 
+field_count = 6
 data_index = 0,1,2,3,4,5
