--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,6 +1,7 @@
 [server]
 domain = www.ubssdic.com
-nodes= info,manager,nav,invest 
+#nodes= info,manager,nav,invest 
+nodes= ROI
 
 [home]
 url = /main/products/fundproduct/index.shtml
@@ -25,7 +26,7 @@ data_index=1,3,5,7,9,18
 
 [manager]
 url = /main/products/fundproduct/{fund_code}/fundmanager.shtml?method=1350524379619
-encode = 0 
+encode = 1 
 selected_tags = div, table, tr, tbody, td
 data_list_tags = div/div/div/div
 data_index = 2,4 
@@ -90,3 +91,29 @@ data_list_tags = table/tbody/tr/td
 start_index = 6 
 field_count = 6 
 data_index = 0,1,2,3,4,5
+
+[bonus]
+url = /main/products/fundproduct/{fund_code}/fundfh.shtml?method=1350872233810 
+encode = 0 
+property_name = bordercolor
+property_value = #CED9E4
+data_tag = table
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 4
+field_count = 4 
+table_index = 0 
+data_index = 0,1,2,3
+
+[ROI]
+url = /main/products/fundproduct/{fund_code}/jzhb.shtml?method=1350872233810 
+encode = 0 
+property_name = bordercolor
+property_value = #CED9E4
+data_tag = table
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 0 
+field_count = 8 
+table_index = 0 
+data_index = 0,1,2,3,4,5,6,7
