--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,11 +1,11 @@
 [server]
 domain = www.bosera.com
-nodes= ROI
+nodes= info 
 #nodes= info,manager,nav,invest,bonus
 
 [home]
 url = /fund/jijinchanpin.html 
-encode = 1
+encode = 0 
 data_tag = table
 property_name = class
 property_value = stripeTbl 
@@ -18,10 +18,10 @@ data_index = 0,1,2
 
 [info]
 url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_050002&fundCode={fund_code}&fundType=0 
-encode = 0
+encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
-data_index = 1,3,5,7,9
+data_index = 1,3,5,7,9,23,36,25,29,15,17,-1,19
 
 [manager]
 url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode={fund_code}&fundType=0
