--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,7 +1,7 @@
 [server]
 domain = www.ubssdic.com
 #nodes= info,manager,nav,invest 
-nodes= ROI
+nodes= info
 
 [home]
 url = /main/products/fundproduct/index.shtml
@@ -22,7 +22,7 @@ url = /main/products/fundproduct/{fund_code}/fundgk.shtml
 encode = 0
 selected_tags = div,table,tr,tbody,td
 data_list_tags = div/div/div/div/table/tr/td
-data_index=1,3,5,7,9,18
+data_index=1,-1,5,17,3,13,22,7,9,23,25,-1
 
 [manager]
 url = /main/products/fundproduct/{fund_code}/fundmanager.shtml?method=1350524379619
