add db engine and email util

--- a/Projects/Python/fund/config/config.ini
+++ b/Projects/Python/fund/config/config.ini
@@ -1,2 +1,14 @@
 [funds]
-sites= 04 
+sites= 02,04 
+
+[db]
+host=127.0.0.1
+port=3306
+user=dba
+password=dba
+db=account
+
+[smtp]
+host=smtp.163.com
+user=tony.ju
+password=badboy2011
