--- a/Projects/Python/fund/config/config.ini
+++ b/Projects/Python/fund/config/config.ini
@@ -1,12 +1,12 @@
 [funds]
-sites= 02,04 
+sites = 02
 
 [db]
 host=127.0.0.1
 port=3306
 user=dba
 password=dba
-db=account
+db=finacial_products
 
 [smtp]
 host=smtp.163.com
