--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -21,7 +21,7 @@ url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
-data_index = 1,3,5,7,9,23,36,25,29,15,17,-1,19
+data_index = 3,1,9,7,23,25,29,15,-1,-1,-1,36,19,-1
 
 [manager]
 url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode={fund_code}&fundType=0
