--- a/Projects/Python/fund/config/config.ini
+++ b/Projects/Python/fund/config/config.ini
@@ -1,12 +1,12 @@
-[funds]
-sites = 02
+[app]
+show_error = 1 
 
 [db]
 host=127.0.0.1
 port=3306
 user=dba
 password=dba
-db=finacial_products
+db=fund
 
 [smtp]
 host=smtp.163.com
