--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,23 +1,25 @@
 [server]
 domain = www.bosera.com
-nodes= info 
+nodes= roi 
 #nodes= info,manager,nav,invest,bonus
 
 [home]
 url = /fund/jijinchanpin.html 
 encode = 0 
-data_tag = table
+#soup fetcher.
 property_name = class
 property_value = stripeTbl 
+data_tag = table
+table_index = 1
+#html tags
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
 start_index = 0
 field_count = 11
-table_index = 1
 data_index = 0,1,2
 
 [info]
-url= /jjcp/kf/jjxx/index.jsp?0.31373765668831766&classid=000200020003_FUND_OPEN_1101_050002&fundCode={fund_code}&fundType=0 
+url= /jjcp/kf/jjxx/index.jsp?&fundCode={fund_code}&fundType=0 
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
@@ -25,67 +27,26 @@ data_index = 3,1,9,7,23,25,29,15,-1,-1,-1,36,19,-1
 
 [manager]
 url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode={fund_code}&fundType=0
-encode = 0 
+encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
-data_index = 0,1
+data_index = 2,3,-1,-1,-1
 
 [nav]
 url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10000&order=netdate&sort=1&fundCode={fund_code}&startDt=2003-08-25&endDt=2012-10-17
 encode = 0
 data_type = json
-target_fields=
 [nav_json]
 data_node = records
-source_fields= closeprice,totalnetvalue,netvalueper,totalpricevalue,assetvalue,netdate,pricevalue
+source_fields= netdate,netvalueper,totalnetvalue
 
 [invest]
-url = /jjcp/kf/tzzh/index.jsp?0.9258281689899641&investDate=2012-06-30&fundCode={fund_code}&fundType=0&&param=2012%2525E5%2525B9%2525B4%2C1%2C197
-encode = 0
+url = /jjcp/kf/tzzh/index.jsp?fundCode={fund_code}&fundType=0 
+encode = 1
 data_tag = table
+table_index = 2,3,4,5,6
 property_name = 
-property_value =  
-data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
-
-[invest_overall]
-table_index = 0
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 0
-field_count = 2
-data_index = 0,1
-
-[invest_stock_summary]
-table_index = 1
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 3
-field_count = 3
-data_index = 0,1,2
-
-[invest_stock_top]
-table_index = 2
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 4
-field_count = 4 
-data_index = 0,1,2,3
-
-[invest_bond_summary]
-table_index = 3
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 3
-field_count = 3
-data_index = 0,1,2
-
-[invest_bond_top]
-table_index = 4
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 3
-field_count = 3
-data_index = 0,1,2
+property_value = 
 
 [bonus]
 url = /jjcp/kf/fhxx/index.jsp?0.03408895768929732i&classid=000200020003_FUND_OPEN_1101_{fund_code}&fundCode={fund_code}&fundType=0
@@ -100,15 +61,23 @@ field_count = 4
 table_index = 0 
 data_index = 0,1,2
 
-[ROI]
-url = /jjcp/kf/tzhb/index.jsp?0.03408895768929732i&classid=000200020003_FUND_OPEN_1101_{fund_code}&fundCode={fund_code}&fundType=0
+[roi]
+url = /jjcp/kf/tzhb/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1 
+#soup
 property_name = class
 property_value = border_ccc_2
 data_tag = table
+table_index = 0
+#html_parser
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
-start_index = 3
-field_count = 2 
-table_index = 0 
-data_index = 0,1
+data_index = -1,6,8,-1,10,12,14,-1,-1,16
+
+[charge]
+url = /jjcp/kf/fljg/index.jsp?fundCode={fund_code}&fundType=0 
+encode = 1
+data_tag = table
+table_index = 1,2,3,4
+property_name = 
+property_value = 
