--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,7 +1,7 @@
 [server]
 domain = www.bosera.com
-nodes= roi 
-#nodes= info,manager,nav,invest,bonus
+nodes= announcement
+#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
 
 [home]
 url = /fund/jijinchanpin.html 
@@ -33,7 +33,7 @@ data_list_tags = table/tr/td
 data_index = 2,3,-1,-1,-1
 
 [nav]
-url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10000&order=netdate&sort=1&fundCode={fund_code}&startDt=2003-08-25&endDt=2012-10-17
+url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10000&order=netdate&sort=1&fundCode={fund_code}&startDt=1980-08-25&endDt=2100-10-17
 encode = 0
 data_type = json
 [nav_json]
@@ -48,18 +48,18 @@ table_index = 2,3,4,5,6
 property_name = 
 property_value = 
 
-[bonus]
-url = /jjcp/kf/fhxx/index.jsp?0.03408895768929732i&classid=000200020003_FUND_OPEN_1101_{fund_code}&fundCode={fund_code}&fundType=0
+[dividend]
+url = /jjcp/kf/fhxx/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1 
 property_name = class
 property_value = border_ccc_2
 data_tag = table
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
-start_index = 4
+start_index = 12
 field_count = 4 
 table_index = 0 
-data_index = 0,1,2
+data_index = -1,0,1,2,3,-1,-1
 
 [roi]
 url = /jjcp/kf/tzhb/index.jsp?fundCode={fund_code}&fundType=0
@@ -81,3 +81,20 @@ data_tag = table
 table_index = 1,2,3,4
 property_name = 
 property_value = 
+
+[files]
+url = /servlet/com.bosera.www.servlet.GetInfoListServlet?fields=url&fields=title&fields=ORIGINALTIME&pageIndex=1&pageSize=1000&order=originaltime&sort=1&classID=00020002000300040001&fundCode={fund_code}
+encode = 1 
+data_type = json
+[files_json]
+data_node = records
+source_fields= title,url,originaltime 
+url_prefix = http://www.bosera.com
+
+[announcement]
+url = /servlet/com.bosera.www.servlet.GetInfoListServlet?fields=url&fields=title&fields=ORIGINALTIME&pageIndex=2&pageSize=15&order=originaltime&sort=1&classID=0002000200030005&fundCode={fund_code}
+encode = 1 
+data_type = json
+[announcement_json]
+data_node = records
+source_fields= title,url,originaltime 
