--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -30,7 +30,7 @@ url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode={fund_code}&fundType=
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
-data_index = 2,3,-1,-1,-1
+data_index = 2,-1,3,-1,-1,-1
 
 [nav]
 url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10000&order=netdate&sort=1&fundCode={fund_code}&startDt=1980-08-25&endDt=2100-10-17
