--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,7 +1,7 @@
 [server]
 domain = www.ubssdic.com
-#nodes= info,manager,nav,invest 
-nodes= info
+#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
+nodes= manager
 
 [home]
 url = /main/products/fundproduct/index.shtml
@@ -14,36 +14,35 @@ data_list_tags = table/tr/td
 start_index = 3
 field_count = 3
 data_index = 0,1,2
-
-
-
 [info]
 url = /main/products/fundproduct/{fund_code}/fundgk.shtml
 encode = 0
 selected_tags = div,table,tr,tbody,td
 data_list_tags = div/div/div/div/table/tr/td
-data_index=1,-1,5,17,3,13,22,7,9,23,25,-1
-
+data_index= -1,1,3,17,13,7,9,23,24,25,-1,22,21,-1
 [manager]
-url = /main/products/fundproduct/{fund_code}/fundmanager.shtml?method=1350524379619
-encode = 1 
-selected_tags = div, table, tr, tbody, td
-data_list_tags = div/div/div/div
-data_index = 2,4 
-
+url = /main/products/fundproduct/{fund_code}/fundmanager.shtml
+encode = 0 
+property_name = 
+property_value = 
+data_tag = table
+table_index = 0
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td,table/tr/td/table/tr/td
+field_count = 14
+start_index = 0
+data_index = 1,6,11,-1,8,-1
 [nav]
 url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid={fund_code}&startdate=&enddate=&currentPage=1&numPerPage=10000 
 encode = 0
 data_type = html
 target_fields=
-
 [nav_html]
 selected_tags = table,tr,td
 data_list_tags = table/tr/td
 start_index = 3
 field_count = 4
 data_index = 0,1,2,3
-
 [invest]
 url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid={fund_code}&param=2011%2525E5%2525B9%2525B4%2C3%2C129
 encode = 0
@@ -51,7 +50,6 @@ data_tag = table
 property_name = 
 property_value =  
 data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
-
 [invest_overall]
 table_index = 0
 selected_tags = table,tr,tbody,td,p,span
@@ -59,7 +57,6 @@ data_list_tags = table/tbody/tr/td/p/span/span/span/span
 start_index = 4
 field_count = 4 
 data_index = 0,1,2,3
-
 [invest_stock_summary]
 table_index = 1
 selected_tags = table,tr,tbody,td
@@ -67,7 +64,6 @@ data_list_tags = table/tbody/tr/td
 start_index = 4
 field_count = 4 
 data_index = 0,1,2,3
-
 [invest_stock_top]
 table_index = 2
 selected_tags = table,tr,tbody,td
@@ -75,7 +71,6 @@ data_list_tags = table/tbody/tr/td
 start_index = 6
 field_count =  6
 data_index = 0,1,2,3,4,5
-
 [invest_bond_summary]
 table_index = 3
 selected_tags = table,tr,tbody,td
@@ -83,7 +78,6 @@ data_list_tags = table/tbody/tr/td
 start_index = 4 
 field_count = 4 
 data_index = 0,1,2,3
-
 [invest_bond_top]
 table_index = 4
 selected_tags = table,tr,tbody,td
@@ -91,7 +85,6 @@ data_list_tags = table/tbody/tr/td
 start_index = 6 
 field_count = 6 
 data_index = 0,1,2,3,4,5
-
 [bonus]
 url = /main/products/fundproduct/{fund_code}/fundfh.shtml?method=1350872233810 
 encode = 0 
