--- a/Projects/Python/fund/config/config.ini
+++ b/Projects/Python/fund/config/config.ini
@@ -1,5 +1,12 @@
 [app]
-show_error = 1 
+#: 0, show error messages, and stop running.
+#: 1. skipped error, continue running.
+skipped_error = 1 
+#: 1, show soup data
+#: 2, show html parser data
+#: 3, show record
+#: 4, save to db
+debug = 0,0,0,1
 
 [db]
 host=127.0.0.1
