--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,66 +1,73 @@
 [server]
 domain = www.bosera.com
 nodes= announcement
-#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
-
+sample_code =
+nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
 [home]
 url = /fund/jijinchanpin.html 
-encode = 0 
+encode = 1 
 #soup fetcher.
 property_name = class
 property_value = stripeTbl 
 data_tag = table
-table_index = 1
+soup_index = 1
 #html tags
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
 start_index = 0
 field_count = 11
 data_index = 0,1,2
-
 [info]
 url= /jjcp/kf/jjxx/index.jsp?&fundCode={fund_code}&fundType=0 
 encode = 1 
 selected_tags = div,table,tr,tbody,td
 data_list_tags = table/tr/td
+start_index = 0
 data_index = 3,1,9,7,23,25,29,15,-1,-1,-1,36,19,-1
-
 [manager]
 url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode={fund_code}&fundType=0
 encode = 1 
-selected_tags = div,table,tr,tbody,td
+#soup
+data_tag = table
+property_name = 
+property_value = 
+soup_index = 0
+#parser
+selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
+start_index = 0
+field_count = 100
 data_index = 2,-1,3,-1,-1,-1
-
 [nav]
-url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10000&order=netdate&sort=1&fundCode={fund_code}&startDt=1980-08-25&endDt=2100-10-17
+url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10&order=netdate&sort=1&fundCode={fund_code}&startDt=2012-08-25&endDt=2012-09-10
 encode = 0
 data_type = json
 [nav_json]
 data_node = records
 source_fields= netdate,netvalueper,totalnetvalue
-
 [invest]
 url = /jjcp/kf/tzzh/index.jsp?fundCode={fund_code}&fundType=0 
 encode = 1
+#soup
 data_tag = table
-table_index = 2,3,4,5,6
 property_name = 
 property_value = 
-
+soup_index = 2,3,4,5,6
 [dividend]
 url = /jjcp/kf/fhxx/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1 
+data_tag = table
 property_name = class
 property_value = border_ccc_2
-data_tag = table
+soup_index = 0
+#parser
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
 start_index = 12
 field_count = 4 
 table_index = 0 
+#record
 data_index = -1,0,1,2,3,-1,-1
-
 [roi]
 url = /jjcp/kf/tzhb/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1 
@@ -68,20 +75,19 @@ encode = 1
 property_name = class
 property_value = border_ccc_2
 data_tag = table
-table_index = 0
+soup_index = 0
 #html_parser
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
+start_index = 0
 data_index = -1,6,8,-1,10,12,14,-1,-1,16
-
 [charge]
 url = /jjcp/kf/fljg/index.jsp?fundCode={fund_code}&fundType=0 
 encode = 1
 data_tag = table
-table_index = 1,2,3,4
 property_name = 
 property_value = 
-
+soup_index = 1,2,3,4
 [files]
 url = /servlet/com.bosera.www.servlet.GetInfoListServlet?fields=url&fields=title&fields=ORIGINALTIME&pageIndex=1&pageSize=1000&order=originaltime&sort=1&classID=00020002000300040001&fundCode={fund_code}
 encode = 1 
@@ -89,8 +95,6 @@ data_type = json
 [files_json]
 data_node = records
 source_fields= title,url,originaltime 
-url_prefix = http://www.bosera.com
-
 [announcement]
 url = /servlet/com.bosera.www.servlet.GetInfoListServlet?fields=url&fields=title&fields=ORIGINALTIME&pageIndex=2&pageSize=15&order=originaltime&sort=1&classID=0002000200030005&fundCode={fund_code}
 encode = 1 
