--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,14 +1,16 @@
 [server]
 domain = www.ubssdic.com
-#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
-nodes= manager
-
+nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement,sales
+sample_code =
 [home]
 url = /main/products/fundproduct/index.shtml
 encode = 0
+#soup
 data_tag = div
 property_name = class
 property_value = plist_pics 
+soup_index = 0
+#html parser
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td
 start_index = 3
@@ -19,94 +21,117 @@ url = /main/products/fundproduct/{fund_code}/fundgk.shtml
 encode = 0
 selected_tags = div,table,tr,tbody,td
 data_list_tags = div/div/div/div/table/tr/td
+start_index = 0
 data_index= -1,1,3,17,13,7,9,23,24,25,-1,22,21,-1
 [manager]
 url = /main/products/fundproduct/{fund_code}/fundmanager.shtml
 encode = 0 
+#soup
+data_tag = table
 property_name = 
 property_value = 
-data_tag = table
-table_index = 0
+soup_index = 0
+#parser
 selected_tags = table,tr,tbody,td
 data_list_tags = table/tr/td,table/tr/td/table/tr/td
 field_count = 14
 start_index = 0
 data_index = 1,6,11,-1,8,-1
 [nav]
-url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid={fund_code}&startdate=&enddate=&currentPage=1&numPerPage=10000 
+url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid={fund_code}&startdate=&enddate=&currentPage=1&numPerPage=5 
 encode = 0
 data_type = html
-target_fields=
-[nav_html]
-selected_tags = table,tr,td
-data_list_tags = table/tr/td
-start_index = 3
-field_count = 4
-data_index = 0,1,2,3
+#soup
+data_tag = table
+property_name = 
+property_value = 
+soup_index = 0
+#parser
+selected_tags = table,tr,td,span
+data_list_tags = table/tr/td,table/tr/td/span
+start_index = 8 
+field_count = 7 
+data_index = 0,1,2
 [invest]
 url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid={fund_code}&param=2011%2525E5%2525B9%2525B4%2C3%2C129
 encode = 0
+debug = 0
+#soup
 data_tag = table
 property_name = 
-property_value =  
-data_nodes = overall,stock_summary,stock_top,bond_summary,bond_top
-[invest_overall]
-table_index = 0
-selected_tags = table,tr,tbody,td,p,span
-data_list_tags = table/tbody/tr/td/p/span/span/span/span
-start_index = 4
+property_value = 
+soup_index = 1,2,3,4,5
+[dividend]
+url = /main/products/fundproduct/{fund_code}/fundfh.shtml 
+encode = 0 
+#soup
+data_tag = table
+property_name = bordercolor
+property_value = #CED9E4
+soup_index = 0 
+#parser
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 10 
 field_count = 4 
-data_index = 0,1,2,3
-[invest_stock_summary]
-table_index = 1
+data_index = 0,-1,2,-1,-1,1,3
+[roi]
+url = /main/products/fundproduct/{fund_code}/jzhb.shtml 
+encode = 0 
+#soup
+data_tag = table
+property_name = bordercolor
+property_value = #CED9E4
+soup_index = 0 
+#parser
+selected_tags = table,tr,tbody,td,span
+data_list_tags = table/tr/td,table/tr/td/span
+start_index = 31 
+#record
+data_index = 0,3,6,9,12,-1,15,18,-1,21
+[charge]
+url = /main/products/fundproduct/{fund_code}/fundfl.shtml 
+encode = 0 
+#soup
+data_tag = table
+property_name = 
+property_value = 
+soup_index = 1,2,3
+[files]
+url =/cgi-bin/news/ArticleAction?function=AjaxFundArticleList&fundid={fund_code}&catalogId=3285&currentPage=1&numPerPage=10 
+encode = 0 
+data_type = html
+#soup
+data_tag = table
+property_name = 
+property_value = 
+soup_index = 0
+#parser
 selected_tags = table,tr,tbody,td
-data_list_tags = table/tbody/tr/td
-start_index = 4
-field_count = 4 
-data_index = 0,1,2,3
-[invest_stock_top]
-table_index = 2
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tbody/tr/td
-start_index = 6
-field_count =  6
-data_index = 0,1,2,3,4,5
-[invest_bond_summary]
-table_index = 3
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tbody/tr/td
+data_list_tags = table/tr/td
 start_index = 4 
-field_count = 4 
-data_index = 0,1,2,3
-[invest_bond_top]
-table_index = 4
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tbody/tr/td
-start_index = 6 
-field_count = 6 
-data_index = 0,1,2,3,4,5
-[bonus]
-url = /main/products/fundproduct/{fund_code}/fundfh.shtml?method=1350872233810 
-encode = 0 
-property_name = bordercolor
-property_value = #CED9E4
-data_tag = table
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 4
-field_count = 4 
-table_index = 0 
-data_index = 0,1,2,3
-
-[ROI]
-url = /main/products/fundproduct/{fund_code}/jzhb.shtml?method=1350872233810 
-encode = 0 
-property_name = bordercolor
-property_value = #CED9E4
-data_tag = table
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 0 
 field_count = 8 
-table_index = 0 
-data_index = 0,1,2,3,4,5,6,7
+data_index = 0,2
+[announcement]
+url =/cgi-bin/news/ArticleAction?function=AjaxFundArticleList&fundid={fund_code}&catalogId=3271&currentPage=1&numPerPage=10 
+encode = 0 
+data_type = html
+#soup
+data_tag = table
+property_name = 
+property_value = 
+soup_index = 0
+#parser
+selected_tags = table,tr,tbody,td
+data_list_tags = table/tr/td
+start_index = 4 
+field_count = 8 
+data_index = 0,2
+[sales]
+url = /main/products/fundproduct/{fund_code}/buymethod.shtml 
+encode = 0 
+#soup
+data_tag = table
+property_name = 
+property_value = 
+soup_index = 0 
