--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,8 +1,9 @@
 [server]
 domain = www.bosera.com
-sample_code =
-#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
-nodes= info
+sample_code = 
+#sample_code = 050010
+nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
+#nodes= charge 
 [home]
 url = /fund/jijinchanpin.html 
 encode = 1 
@@ -20,26 +21,34 @@ start_index = 0
 field_count = 1
 data_index = 0
 [info]
-url= /jjcp/kf/jjxx/index.jsp?&fundCode={fund_code}&fundType=0 
+url= /jjcp/kf/jjxx/index.jsp?fundCode={fund_code}&fundType=0 
 encode = 1 
-selected_tags = div,table,tr,tbody,td
-data_list_tags = table/tr/td
+data_tag = table
+property_name = 
+property_value = 
+soup_index = 0
+selected_tag = td
+ignore_tag = 
+entired_text = 0
+multi = 0
 start_index = 0
-data_index = 3,1,9,7,23,25,29,15,-1,-1,-1,36,19,-1
+data_index = 3,1,9,7,23,25,29,-1,-1,17,-1,35,19,-1
 [manager]
-url = /jjcp/kf/jjjl/index.jsp?0.31373765668831766&fundCode={fund_code}&fundType=0
+url = /jjcp/kf/jjjl/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1 
 #soup
 data_tag = table
 property_name = 
 property_value = 
 soup_index = 0
+selected_tag = td
+ignore_tag = table
+entired_text = 0
+multi = 1
 #parser
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
 start_index = 0
-field_count = 100
-data_index = 2,-1,3,-1,-1,-1
+field_count = 2
+data_index = -1,-1,1,-1,-1,-1
 [nav]
 url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10&order=netdate&sort=1&fundCode={fund_code}&startDt=2012-08-25&endDt=2012-09-10
 encode = 0
@@ -49,12 +58,18 @@ data_node = records
 source_fields= netdate,netvalueper,totalnetvalue
 [invest]
 url = /jjcp/kf/tzzh/index.jsp?fundCode={fund_code}&fundType=0 
-encode = 1
+encode = 0 
 #soup
 data_tag = table
 property_name = 
-property_value = 
-soup_index = 2,3,4,5,6
+property_value =
+soup_index = 2,3,4,5,6 
+selected_tag =  
+ignore_tag = 
+entired_text = 0 
+start_index = 0
+multi = 0
+data_index = 0,1,2,3,4
 [dividend]
 url = /jjcp/kf/fhxx/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1 
@@ -62,13 +77,12 @@ data_tag = table
 property_name = class
 property_value = border_ccc_2
 soup_index = 0
-#parser
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 12
+selected_tag = td
+ignore_tag = table
+multi = 1
+entired_text = 0
+start_index = 4
 field_count = 4 
-table_index = 0 
-#record
 data_index = -1,0,1,2,3,-1,-1
 [roi]
 url = /jjcp/kf/tzhb/index.jsp?fundCode={fund_code}&fundType=0
@@ -77,12 +91,13 @@ encode = 1
 property_name = class
 property_value = border_ccc_2
 data_tag = table
+selected_tag = td
+ignore_tag = table 
+multi = 0
+entired_text = 0
 soup_index = 0
-#html_parser
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 0
-data_index = -1,6,8,-1,10,12,14,-1,-1,16
+start_index = 3
+data_index = -1,1,3,-1,5,7,9,-1,-1,11
 [charge]
 url = /jjcp/kf/fljg/index.jsp?fundCode={fund_code}&fundType=0 
 encode = 1
@@ -90,6 +105,12 @@ data_tag = table
 property_name = 
 property_value = 
 soup_index = 1,2,3,4
+selected_tag =
+ignore_tag = 
+multi = 0
+entired_text = 0
+start_index = 0 
+data_index = 0,1,2,3 
 [files]
 url = /servlet/com.bosera.www.servlet.GetInfoListServlet?fields=url&fields=title&fields=ORIGINALTIME&pageIndex=1&pageSize=1000&order=originaltime&sort=1&classID=00020002000300040001&fundCode={fund_code}
 encode = 1 
