--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,7 +1,8 @@
 [server]
 domain = www.ubssdic.com
-nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement,sales
-sample_code =
+#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement,sales
+nodes= files
+sample_code = 121009
 [home]
 url = /main/products/fundproduct/index.shtml
 encode = 0
@@ -10,19 +11,28 @@ data_tag = div
 property_name = class
 property_value = plist_pics 
 soup_index = 0
-#html parser
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
+selected_tag = div
+ignore_tag = div
+entired_text = 1
+multi = 1
 start_index = 3
-field_count = 3
-data_index = 0,1,2
+field_count = 1 
+data_index = 0
 [info]
 url = /main/products/fundproduct/{fund_code}/fundgk.shtml
 encode = 0
-selected_tags = div,table,tr,tbody,td
-data_list_tags = div/div/div/div/table/tr/td
+data_tag = table
+property_name =
+property_value = 
+soup_index = 0,1,2,3,4
+selected_tag = td
+ignore_tag = table
+entired_text = 0 
+multi = 0 
 start_index = 0
-data_index= -1,1,3,17,13,7,9,23,24,25,-1,22,21,-1
+start_index = 0
+field_count = 0 
+data_index= -1,1,3,18,14,7,9,24,25,26,-1,23,22,-1
 [manager]
 url = /main/products/fundproduct/{fund_code}/fundmanager.shtml
 encode = 0 
@@ -31,48 +41,54 @@ data_tag = table
 property_name = 
 property_value = 
 soup_index = 0
-#parser
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td,table/tr/td/table/tr/td
-field_count = 14
+selected_tag = td
+ignore_tag = table
+entired_text = 0
+multi = 1
+field_count = 11 
 start_index = 0
-data_index = 1,6,11,-1,8,-1
+data_index = 1,5,9,-1,7,-1
 [nav]
 url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundnavListResult&fundid={fund_code}&startdate=&enddate=&currentPage=1&numPerPage=5 
 encode = 0
 data_type = html
 #soup
 data_tag = table
-property_name = 
-property_value = 
+property_name = bordercolor
+property_value = #CED9E4 
 soup_index = 0
-#parser
-selected_tags = table,tr,td,span
-data_list_tags = table/tr/td,table/tr/td/span
-start_index = 8 
-field_count = 7 
+selected_tag = td
+ignore_tag = 
+entired_text = 0
+multi = 1
+start_index = 4 
+field_count = 5 
 data_index = 0,1,2
 [invest]
 url = /cgi-bin/fundproduct/FundProductAction?function=AjaxInvert_new&fundid={fund_code}&param=2011%2525E5%2525B9%2525B4%2C3%2C129
 encode = 0
-debug = 0
-#soup
 data_tag = table
 property_name = 
 property_value = 
 soup_index = 1,2,3,4,5
+selected_tag =  
+ignore_tag = 
+entired_text = 0 
+start_index = 0
+multi = 0
+data_index = 0,1,2,3,4
 [dividend]
 url = /main/products/fundproduct/{fund_code}/fundfh.shtml 
 encode = 0 
-#soup
 data_tag = table
 property_name = bordercolor
 property_value = #CED9E4
-soup_index = 0 
-#parser
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 10 
+soup_index = 0
+selected_tag = td
+ignore_tag =
+multi = 1
+entired_text = 0
+start_index = 4
 field_count = 4 
 data_index = 0,-1,2,-1,-1,1,3
 [roi]
@@ -82,21 +98,26 @@ encode = 0
 data_tag = table
 property_name = bordercolor
 property_value = #CED9E4
-soup_index = 0 
-#parser
-selected_tags = table,tr,tbody,td,span
-data_list_tags = table/tr/td,table/tr/td/span
-start_index = 31 
-#record
-data_index = 0,3,6,9,12,-1,15,18,-1,21
+selected_tag = td
+ignore_tag = 
+multi = 0
+entired_text = 0
+soup_index = 0
+start_index = 10
+data_index = 0,1,2,3,4,-1,5,6,-1,7
 [charge]
 url = /main/products/fundproduct/{fund_code}/fundfl.shtml 
 encode = 0 
-#soup
 data_tag = table
 property_name = 
 property_value = 
-soup_index = 1,2,3
+soup_index = 1,2,4,5
+selected_tag =  
+ignore_tag = 
+entired_text = 0 
+start_index = 0
+multi = 0
+data_index = 0,1,2,3
 [files]
 url =/cgi-bin/news/ArticleAction?function=AjaxFundArticleList&fundid={fund_code}&catalogId=3285&currentPage=1&numPerPage=10 
 encode = 0 
@@ -106,12 +127,14 @@ data_tag = table
 property_name = 
 property_value = 
 soup_index = 0
-#parser
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 4 
-field_count = 8 
-data_index = 0,2
+selected_tag = td
+ignore_tag = 
+entired_text = 1
+attr_tag = a,href
+multi = 1
+start_index = 0 
+field_count = 5 
+data_index = 2,3
 [announcement]
 url =/cgi-bin/news/ArticleAction?function=AjaxFundArticleList&fundid={fund_code}&catalogId=3271&currentPage=1&numPerPage=10 
 encode = 0 
