--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,7 +1,7 @@
 [server]
 domain = www.ubssdic.com
 #nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement,sales
-nodes= files
+nodes= announcement
 sample_code = 121009
 [home]
 url = /main/products/fundproduct/index.shtml
@@ -13,6 +13,7 @@ property_value = plist_pics
 soup_index = 0
 selected_tag = div
 ignore_tag = div
+attr_tag = a,href
 entired_text = 1
 multi = 1
 start_index = 3
@@ -114,7 +115,7 @@ property_value =
 soup_index = 1,2,4,5
 selected_tag =  
 ignore_tag = 
-entired_text = 0 
+attr_tags = a,href
 start_index = 0
 multi = 0
 data_index = 0,1,2,3
@@ -129,12 +130,11 @@ property_value =
 soup_index = 0
 selected_tag = td
 ignore_tag = 
-entired_text = 1
 attr_tag = a,href
 multi = 1
 start_index = 0 
-field_count = 5 
-data_index = 2,3
+field_count = 6
+data_index = 2,3,4
 [announcement]
 url =/cgi-bin/news/ArticleAction?function=AjaxFundArticleList&fundid={fund_code}&catalogId=3271&currentPage=1&numPerPage=10 
 encode = 0 
@@ -144,12 +144,14 @@ data_tag = table
 property_name = 
 property_value = 
 soup_index = 0
-#parser
-selected_tags = table,tr,tbody,td
-data_list_tags = table/tr/td
-start_index = 4 
-field_count = 8 
-data_index = 0,2
+selected_tag = td
+ignore_tag = 
+attr_tag = a,href
+multi = 1
+start_index = 0 
+field_count = 6
+data_index = 2,3,4
+
 [sales]
 url = /main/products/fundproduct/{fund_code}/buymethod.shtml 
 encode = 0 
