--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,7 +1,7 @@
 [server]
 domain = www.ubssdic.com
 #nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement,sales
-nodes= announcement
+nodes= sales
 sample_code = 121009
 [home]
 url = /main/products/fundproduct/index.shtml
@@ -28,6 +28,7 @@ property_value =
 soup_index = 0,1,2,3,4
 selected_tag = td
 ignore_tag = table
+attr_tag =
 entired_text = 0 
 multi = 0 
 start_index = 0
@@ -45,6 +46,7 @@ soup_index = 0
 selected_tag = td
 ignore_tag = table
 entired_text = 0
+attr_tag =
 multi = 1
 field_count = 11 
 start_index = 0
@@ -61,6 +63,7 @@ soup_index = 0
 selected_tag = td
 ignore_tag = 
 entired_text = 0
+attr_tag =
 multi = 1
 start_index = 4 
 field_count = 5 
@@ -74,6 +77,7 @@ property_value =
 soup_index = 1,2,3,4,5
 selected_tag =  
 ignore_tag = 
+attr_tag =
 entired_text = 0 
 start_index = 0
 multi = 0
@@ -87,6 +91,7 @@ property_value = #CED9E4
 soup_index = 0
 selected_tag = td
 ignore_tag =
+attr_tag =
 multi = 1
 entired_text = 0
 start_index = 4
@@ -101,6 +106,7 @@ property_name = bordercolor
 property_value = #CED9E4
 selected_tag = td
 ignore_tag = 
+attr_tag =
 multi = 0
 entired_text = 0
 soup_index = 0
@@ -115,7 +121,7 @@ property_value =
 soup_index = 1,2,4,5
 selected_tag =  
 ignore_tag = 
-attr_tags = a,href
+attr_tag = 
 start_index = 0
 multi = 0
 data_index = 0,1,2,3
@@ -155,8 +161,14 @@ data_index = 2,3,4
 [sales]
 url = /main/products/fundproduct/{fund_code}/buymethod.shtml 
 encode = 0 
-#soup
 data_tag = table
 property_name = 
 property_value = 
-soup_index = 0 
+soup_index = 1
+selected_tag =  
+ignore_tag = 
+attr_tag =
+entired_text = 0 
+start_index = 0
+multi = 0
+data_index = 0
