--- a/Projects/Python/fund/config/02.ini
+++ b/Projects/Python/fund/config/02.ini
@@ -1,9 +1,8 @@
 [server]
 domain = www.bosera.com
 sample_code = 
-#sample_code = 050010
+#sample_code = 159908 
 nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
-#nodes= charge 
 [home]
 url = /fund/jijinchanpin.html 
 encode = 1 
@@ -16,6 +15,7 @@ soup_index = 1
 multi = 1 
 selected_tag = a
 ignore_tag = 
+attr_tag = a,href
 entired_text = 1
 start_index = 0
 field_count = 1
@@ -29,6 +29,7 @@ property_value =
 soup_index = 0
 selected_tag = td
 ignore_tag = 
+attr_tag = 
 entired_text = 0
 multi = 0
 start_index = 0
@@ -43,6 +44,7 @@ property_value =
 soup_index = 0
 selected_tag = td
 ignore_tag = table
+attr_tag = 
 entired_text = 0
 multi = 1
 #parser
@@ -66,6 +68,7 @@ property_value =
 soup_index = 2,3,4,5,6 
 selected_tag =  
 ignore_tag = 
+attr_tag = 
 entired_text = 0 
 start_index = 0
 multi = 0
@@ -79,6 +82,7 @@ property_value = border_ccc_2
 soup_index = 0
 selected_tag = td
 ignore_tag = table
+attr_tag = 
 multi = 1
 entired_text = 0
 start_index = 4
@@ -93,6 +97,7 @@ property_value = border_ccc_2
 data_tag = table
 selected_tag = td
 ignore_tag = table 
+attr_tag = 
 multi = 0
 entired_text = 0
 soup_index = 0
@@ -107,6 +112,7 @@ property_value =
 soup_index = 1,2,3,4
 selected_tag =
 ignore_tag = 
+attr_tag = 
 multi = 0
 entired_text = 0
 start_index = 0 
