--- a/Projects/Python/fund/config/04.ini
+++ b/Projects/Python/fund/config/04.ini
@@ -1,8 +1,7 @@
 [server]
 domain = www.ubssdic.com
-#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement,sales
-nodes= sales
-sample_code = 121009
+nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement,sales
+sample_code =
 [home]
 url = /main/products/fundproduct/index.shtml
 encode = 0
