--- a/Projects/Python/fund/config/013.ini
+++ b/Projects/Python/fund/config/013.ini
@@ -1,26 +1,29 @@
 [server]
-domain = www.huaan.com.cn
-sample_code = 040003 
+domain = www.cmfchina.com 
+sample_code = 217013
 #nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
-nodes = announcement 
+nodes = info
 [info]
-url = /flagfund_2010/{fund_code}/product.shtml
+url = /cgi-bin/fundproduct/FundProduct?function=FundCatalog&fundid={fund_code}
 encode = 0
+parser_type= html
 data_tag = table
-property_name = class
-property_value= tb_fdcomp1 tb_fdcomp1-2 thcenter
+property_name = bgcolor
+property_value= #CCCCCC 
 soup_index = 0
-selected_tags= td
+selected_tags= table,tbody,tr,td,br,p
+data_list_tags = table/tr/td
 excluded_up_tag =
 excluded_down_tag = 
 attr_tag = 
 multi = 0
 field_count = 0
 start_index = 0
-data_index = 3,0,5,7,8,1,2,11,-1,-1,12,14,12,6
+data_index = 0,1,2,3,4,5
 [manager]
-url = /flagfund_2010/{fund_code}/manager.shtml
+url = 
 encode = 0
+parser_type= soup
 data_tag = ul
 property_name = class
 property_value= phototext_list
@@ -36,6 +39,7 @@ data_index = 0,1,2
 [nav]
 url = /flagfund_2010/selectFundayByCode.do?pageSize=200&gotoPage=1&fd.fundcode={fund_code} 
 encode = 0
+parser_type= soup
 data_type = html
 data_tag = table 
 property_name = 
@@ -52,6 +56,7 @@ data_index = 0,1,2
 [roi]
 url = /flagfund_2010/{fund_code}/performance.shtml
 encode = 0
+parser_type= soup
 data_type =
 data_tag = table 
 property_name = class
@@ -68,6 +73,7 @@ data_index = -1,-1,-1,3,-1,-1,4,-1,-1,5
 [charge]
 url = /fund/FundFee/selectFundfee.do?fundcode={fund_code}
 encode = 0
+parser_type= soup
 data_type =
 data_tag = table
 property_name = 
@@ -83,7 +89,8 @@ start_index = 0
 data_index = 0,-1,-1,-1 
 [files]
 url = /list/629/{fund_code}/1.shtml
-encode = 0 
+encode = 0
+parser_type= soup 
 data_type = html
 #1
 data_tag = div
@@ -102,7 +109,8 @@ field_count = 2
 data_index = 0,1,-1
 [announcement]
 url = /list/630/{fund_code}/1.shtml
-encode = 0 
+encode = 0
+parser_type= soup 
 data_type = html
 #1
 data_tag = div
