html parser fetcher property value

--- a/Projects/Python/fund/config/017.ini
+++ b/Projects/Python/fund/config/017.ini
@@ -2,7 +2,7 @@
 domain = www.51fund.com 
 sample_code = 379010 
 #nodes= info,manager,dividend,charge,announcement
-nodes = 
+nodes = info
 [info]
 url = /fund/{fund_code}/
 encode = 0
@@ -104,9 +104,9 @@ selected_tags = ul,li,a,span
 data_list_tags = ul/li/a,ul/li/span
 excluded_up_tag =
 excluded_down_tag = 
-attr_tag = a,href
+attr_tag = ul/li/a,href
 #3
 multi = 1
 start_index = 0 
-field_count = 2 
-data_index = 0,1,-1
+field_count = 3 
+data_index = 1,0,2
