--- a/Projects/Python/fund/config/010.ini
+++ b/Projects/Python/fund/config/010.ini
@@ -1,8 +1,25 @@
 [server]
 domain = www.huaan.com.cn
-sample_code = 040003 
-#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
-nodes = announcement 
+sample_code = 
+nodes= info,manager,nav,roi,charge,files,announcement
+[home]
+url = /flagfund_2010/index.shtml 
+encode = 0
+data_type = html
+parser_type = soup
+data_tag = div
+property_name = class 
+property_value= ctt 
+soup_index = 0
+selected_tags= td
+data_list_tags = 
+excluded_up_tag =
+excluded_down_tag = 
+attr_tag = a,href
+multi = 1
+field_count = 11
+start_index = 0
+data_index = 0,1,2,3,4,5
 [info]
 url = /flagfund_2010/{fund_code}/product.shtml
 encode = 0
