--- a/Projects/Python/fund/config/012.ini
+++ b/Projects/Python/fund/config/012.ini
@@ -6,7 +6,9 @@ nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement,sales
 sample_code =  
 [home]
 url = /main/products/index.shtml 
-encode = 1 
+encode = 1
+parser_type= soup 
+data_type = html
 data_tag = table
 property_name = id
 property_value = tabFundData
@@ -21,7 +23,8 @@ field_count = 3
 data_index = 0,1,2
 [info]
 url = /main/products/pofund/{fund_code}/fundinfo.shtml
-encode = 1 
+encode = 1
+parser_type= soup 
 data_tag = table
 property_name = class
 property_value = infotable
@@ -36,7 +39,8 @@ field_count = 0
 data_index = 1,0,5,4,6,10,11,12,13,14,15,7,16,-1 
 [manager]
 url = /main/products/pofund/{fund_code}/fundmanager.shtml 
-encode = 1 
+encode = 1
+parser_type= soup 
 data_tag = div
 property_name = id
 property_value = cel
@@ -53,6 +57,7 @@ data_index = 0,-1,5,-1,-1,-1
 [nav]
 url= /cgi-bin/fundproduct/FundProductAction?function=AjaxFundTotalNav&fundid={fund_code}&datetype=&startdate=&enddate=curPage=1&numPerPage=10200&rand=1350451511857 
 encode = 0
+parser_type= soup
 data_type = html
 data_tag = table
 property_name = class
@@ -69,6 +74,7 @@ data_index = 0,1,2
 [invest]
 url=http://www.htffund.com/cgi-bin/fundproduct/FundProductAction?function=AjaxChangeReport&_=1350526315987&fundid={fund_code}&date=2012-03-31&reqUrl=%2Fcgi-bin%2Ffundproduct%2FFundProductAction%3Ffunction%3DAjaxChangeReport
 encode = 1
+parser_type= soup
 data_tag = table
 property_name = 
 property_value = 
@@ -82,7 +88,8 @@ multi = 0
 data_index = 0,1,2,3,4
 [dividend]
 url = /main/products/pofund/{fund_code}/fundnav.shtml 
-encode = 0 
+encode = 0
+parser_type= soup 
 data_tag = table
 property_name = class
 property_value = sharetable intervalbg
@@ -97,7 +104,8 @@ field_count = 5
 data_index = 0,1,2,3,4,-1,-1
 [roi]
 url = /main/products/pofund/{fund_code}/fundyield.shtml 
-encode = 0 
+encode = 0
+parser_type= soup 
 data_tag = table
 property_name = class
 property_value = sharetable intervalbg
@@ -113,7 +121,8 @@ table_index = 0
 data_index = -1,0,1,2,3,4,5,6,7,8
 [files]
 url = /cgi-bin/fundproduct/FundProductAction?function=Moregg&_=1351568337480&catalogId=2972&fundid={fund_code}
-encode = 0 
+encode = 0
+parser_type= soup 
 data_type = html
 #soup
 data_tag = table
@@ -130,7 +139,8 @@ field_count = 5
 data_index = 0,1,2
 [announcement]
 url = /cgi-bin/fundproduct/FundProductAction?function=Moregg&_=1351568337480&catalogId=2973&fundid={fund_code}
-encode = 0 
+encode = 0
+parser_type= soup 
 data_type = html
 #soup
 data_tag = table
@@ -147,7 +157,8 @@ field_count = 5
 data_index = 0,1,2
 [sales]
 url = /main/products/pofund/{fund_code}/fundseat.shtml 
-encode = 1 
+encode = 1
+parser_type= soup 
 data_tag = dl
 property_name = id
 property_value = idContainer2 
@@ -162,7 +173,8 @@ field_count = 1
 data_index = 0
 [charge]
 url = /main/products/pofund/{fund_code}/fundrate.shtml 
-encode = 0 
+encode = 0
+parser_type= soup 
 data_tag = table
 property_name = class
 property_value = sharetable sharetd intervalbg 
