--- a/Projects/Python/fund/config/017.ini
+++ b/Projects/Python/fund/config/017.ini
@@ -1,8 +1,25 @@
 [server]
 domain = www.51fund.com 
-sample_code = 379010 
-#nodes= info,manager,dividend,charge,announcement
-nodes = info
+sample_code = 
+nodes= info,manager,nav,roi,charge,announcement
+[home]
+url = /fund/index_1034.js
+encode = 0
+data_type = str
+parser_type = soup
+data_tag = div
+property_name = class 
+property_value= fond_table
+soup_index = 0,1
+selected_tags= td
+data_list_tags = 
+excluded_up_tag =
+excluded_down_tag = 
+attr_tag = 
+multi = 1
+field_count = 10
+start_index = 0
+data_index = 0,1,2,3,4,5
 [info]
 url = /fund/{fund_code}/
 encode = 0
