--- a/Projects/Python/fund/config/061.ini
+++ b/Projects/Python/fund/config/061.ini
@@ -1,8 +1,27 @@
 [server]
 domain = fund.pingan.com 
-sample_code = 700002
+sample_code = 
 #nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
-nodes = dividend
+nodes =
+[home]
+url = /jijinchanpin.shtml
+encode = 0
+data_type = html
+parser_type = soup
+data_tag = table
+property_name = id
+property_value= fundInfo 
+soup_index = 0
+selected_tags= td
+data_list_tags = 
+excluded_up_tag =
+excluded_down_tag = 
+attr_tag = 
+multi = 1
+field_count = 8
+start_index = 0
+data_index = 0,1,2
+
 [info]
 url = /cms-tmplt/fund/searchFundInfo.do?fundcode={fund_code}
 encode = 0
