--- a/Projects/Python/fund/config/061.ini
+++ b/Projects/Python/fund/config/061.ini
@@ -1,8 +1,7 @@
 [server]
 domain = fund.pingan.com 
-sample_code = 
-#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
-nodes =
+sample_code =
+nodes= info,manager,charge,files,announcement
 [home]
 url = /jijinchanpin.shtml
 encode = 0
@@ -41,24 +40,24 @@ attr_tag =
 multi = 0
 field_count = 0
 start_index = 0
-data_index = 0,1,2,3,4,5
+data_index = 0,2,8,3,-1,6,7,12,13,-1,-1,16,14,-1
 [manager]
 url = /cms-tmplt/fund/searchFundManager.do?fundcode={fund_code}
 encode = 0
-parser_type= html
+parser_type= soup
 data_tag = div
 property_name = class
-property_value= inside
-soup_index = 1
-selected_tags= div,p
-data_list_tags = div/p
+property_value= p_y_t
+soup_index = 0
+selected_tags= div
+data_list_tags = 
 excluded_up_tag =
 excluded_down_tag = 
 attr_tag = img,src
-multi = 0
-field_count = 3
+multi = 1
+field_count = 1
 start_index = 0
-data_index = 0,1
+data_index = -1,-1,0,-1,-1,-1
 [files]
 url = /cms-tmplt/fund/searchSellFile.do?fundcode={fund_code} 
 encode = 0
@@ -95,12 +94,12 @@ selected_tags =
 data_list_tags = 
 excluded_up_tag =
 excluded_down_tag = 
-attr_tag = a,href
+attr_tag = 
 #3
 multi = 0
 field_count = 0
 start_index = 0 
-data_index = 0
+data_index = 0,-1,-1,-1,-1
 [announcement]
 url = /cms-tmplt/fund/searchAnnounce.do?fundcode={fund_code} 
 encode = 0
