--- a/Projects/Python/fund/config/010.ini
+++ b/Projects/Python/fund/config/010.ini
@@ -4,9 +4,9 @@ sample_code =
 nodes= info,manager,nav,roi,charge,files,announcement
 [home]
 url = /flagfund_2010/index.shtml 
-encode = 0
-data_type = html
+encode = 0 
 parser_type = soup
+data_type = html
 data_tag = div
 property_name = class 
 property_value= ctt 
@@ -22,7 +22,8 @@ start_index = 0
 data_index = 0,1,2,3,4,5
 [info]
 url = /flagfund_2010/{fund_code}/product.shtml
-encode = 0
+encode = 0 
+parser_type = soup
 data_tag = table
 property_name = class
 property_value= tb_fdcomp1 tb_fdcomp1-2 thcenter
@@ -37,7 +38,8 @@ start_index = 0
 data_index = 3,0,5,7,8,1,2,11,-1,-1,12,14,12,6
 [manager]
 url = /flagfund_2010/{fund_code}/manager.shtml
-encode = 0
+encode = 0 
+parser_type = soup
 data_tag = ul
 property_name = class
 property_value= phototext_list
@@ -49,10 +51,11 @@ attr_tag = img,src
 multi = 1
 field_count = 3
 start_index = 0
-data_index = 0,1,2
+data_index = -1,-1,2,0,-1,-1
 [nav]
 url = /flagfund_2010/selectFundayByCode.do?pageSize=200&gotoPage=1&fd.fundcode={fund_code} 
-encode = 0
+encode = 0 
+parser_type = soup
 data_type = html
 data_tag = table 
 property_name = 
@@ -68,7 +71,8 @@ start_index = 0
 data_index = 0,1,2
 [roi]
 url = /flagfund_2010/{fund_code}/performance.shtml
-encode = 0
+encode = 0 
+parser_type = soup
 data_type =
 data_tag = table 
 property_name = class
@@ -84,7 +88,8 @@ start_index = 0
 data_index = -1,-1,-1,3,-1,-1,4,-1,-1,5
 [charge]
 url = /fund/FundFee/selectFundfee.do?fundcode={fund_code}
-encode = 0
+encode = 0 
+parser_type = soup
 data_type =
 data_tag = table
 property_name = 
@@ -97,10 +102,11 @@ attr_tag =
 multi = 0
 field_count = 0
 start_index = 0
-data_index = 0,-1,-1,-1 
+data_index = 0,-1,-1,-1,-1
 [files]
 url = /list/629/{fund_code}/1.shtml
 encode = 0 
+parser_type = soup 
 data_type = html
 #1
 data_tag = div
@@ -120,6 +126,7 @@ data_index = 0,1,-1
 [announcement]
 url = /list/630/{fund_code}/1.shtml
 encode = 0 
+parser_type = soup 
 data_type = html
 #1
 data_tag = div
