--- a/Projects/Python/fund/config/017.ini
+++ b/Projects/Python/fund/config/017.ini
@@ -1,7 +1,7 @@
 [server]
 domain = www.51fund.com 
-sample_code = 
-nodes= info,manager,nav,roi,charge,announcement
+sample_code =
+nodes= info,manager,nav,charge,announcement
 [home]
 url = /fund/index_1034.js
 encode = 0
@@ -36,7 +36,7 @@ attr_tag =
 multi = 0
 field_count = 0
 start_index = 0
-data_index = 0,1,2,3,4,5
+data_index = 3,1,7,-1,7,9,15,17,24,-1,27,-1,31,29,-1 
 [manager]
 url = /fund/{fund_code}/manager/
 encode = 0
@@ -50,10 +50,10 @@ data_list_tags = div/h3/span,div/p
 excluded_up_tag =
 excluded_down_tag = 
 attr_tag = img,src
-multi = 0
+multi = 1
 field_count = 3
 start_index = 0
-data_index = 0,1,2
+data_index = 0,-1,2,-1,-1,-1
 [nav]
 url = /fund/{fund_code}/nav/
 encode = 0
@@ -71,24 +71,6 @@ multi = 1
 field_count = 3
 start_index = 0
 data_index = 0,1,2
-[roi]
-url = /fund/{fund_code}/nav/ 
-encode = 0
-parser_type= html
-data_type =
-data_tag = div 
-property_name = class
-property_value= sybx
-soup_index = 0
-selected_tags= div,ul,li,em
-data_list_tags = div/ul/li/em
-excluded_up_tag = 
-excluded_down_tag = 
-attr_tag =
-multi = 0
-field_count = 3
-start_index = 0
-data_index = 0,1,2,3 
 [charge]
 url = /fund/{fund_code}/fee/
 encode = 0
@@ -105,7 +87,7 @@ attr_tag =
 multi = 0
 field_count = 0
 start_index = 0
-data_index = 0,-1,-1,-1 
+data_index = 0,-1,-1,-1,-1
 [announcement]
 url = /fund/{fund_code}/announce/index.html 
 encode = 0
