--- a/Projects/Python/fund/config/data/005.ini
+++ b/Projects/Python/fund/config/data/005.ini
@@ -6,7 +6,7 @@ nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
 [home]
 url = /fund/jijinchanpin.html 
 encode = 0
-parser_type= soup 
+parser_type = soup
 data_type = html
 #soup fetcher.
 data_tag = table
@@ -24,7 +24,8 @@ data_index = 0,1,2,3,4
 [info]
 url= /jjcp/kf/jjxx/index.jsp?fundCode={fund_code}&fundType=0 
 encode = 1
-parser_type= soup
+parser_type = soup
+data_type = html
 data_tag = table
 property_name = 
 property_value = 
@@ -39,7 +40,8 @@ data_index = 3,1,9,7,23,25,29,-1,-1,17,-1,35,19,-1
 [manager]
 url = /jjcp/kf/jjjl/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1
-parser_type= soup
+parser_type = soup
+data_type = html
 #soup
 data_tag = table
 property_name = 
@@ -58,7 +60,7 @@ data_index = -1,-1,4,1,-1,-1
 [nav]
 url= /servlet/com.bosera.www.servlet.QryFundNetValue?fields=netdate&fields=netvalueper&fields=totalnetvalue&fields=closeprice&fields=assetvalue&pageIndex=1&pageSize=10&order=netdate&sort=1&fundCode={fund_code}&startDt=2012-08-25&endDt=2012-09-10
 encode = 0
-parser_type= soup
+parser_type = soup
 data_type = json
 [nav_json]
 data_node = records
@@ -66,7 +68,8 @@ source_fields= netdate,netvalueper,totalnetvalue
 [invest]
 url = /jjcp/kf/tzzh/index.jsp?fundCode={fund_code}&fundType=0 
 encode = 0
-parser_type= soup 
+parser_type = soup
+data_type = html 
 #soup
 data_tag = table
 property_name = 
@@ -82,7 +85,8 @@ data_index = 0,1,2,3,4
 [dividend]
 url = /jjcp/kf/fhxx/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1
-parser_type= soup 
+parser_type = soup
+data_type = html 
 data_tag = table
 property_name = class
 property_value = border_ccc_2
@@ -98,7 +102,8 @@ data_index = -1,0,1,2,3,-1,-1
 [roi]
 url = /jjcp/kf/tzhb/index.jsp?fundCode={fund_code}&fundType=0
 encode = 1
-parser_type= soup 
+parser_type = soup
+data_type = html 
 #soup
 property_name = class
 property_value = border_ccc_2
@@ -114,7 +119,8 @@ data_index = -1,1,3,-1,5,7,9,-1,-1,11
 [charge]
 url = /jjcp/kf/fljg/index.jsp?fundCode={fund_code}&fundType=0 
 encode = 1
-parser_type= soup
+parser_type = soup
+data_type = html
 data_tag = table
 property_name = 
 property_value = 
@@ -129,7 +135,7 @@ data_index = 0,1,2,3,-1
 [files]
 url = /servlet/com.bosera.www.servlet.GetInfoListServlet?fields=url&fields=title&fields=ORIGINALTIME&pageIndex=1&pageSize=1000&order=originaltime&sort=1&classID=00020002000300040001&fundCode={fund_code}
 encode = 1
-parser_type= soup 
+parser_type = soup
 data_type = json
 [files_json]
 data_node = records
@@ -137,7 +143,7 @@ source_fields= title,url,originaltime
 [announcement]
 url = /servlet/com.bosera.www.servlet.GetInfoListServlet?fields=url&fields=title&fields=ORIGINALTIME&pageIndex=2&pageSize=15&order=originaltime&sort=1&classID=0002000200030005&fundCode={fund_code}
 encode = 1
-parser_type= soup 
+parser_type = soup
 data_type = json
 [announcement_json]
 data_node = records
