--- a/Projects/Python/fund/config/config.ini
+++ b/Projects/Python/fund/config/config.ini
@@ -1,19 +1,19 @@
 [app]
 #: 0, show error messages, and stop running.
 #: 1. skipped error, continue running.
-skipped_errors = 0
+skipped_errors = 1
 #: 1, show soup data
 #: 2, show html parser data
 #: 3, show record
 #: 4, save to db
-debug = 0,0,0,1
+debug = 0,1,0,1
 
 [db]
-host=127.0.0.1
+host=192.168.1.7
 port=3306
-user=dba
-password=dba
-db=fund
+user=test
+password=test
+db=test
 
 [smtp]
 host=smtp.163.com
