--- a/Projects/Python/fund/config/data/008.ini
+++ b/Projects/Python/fund/config/data/008.ini
@@ -187,10 +187,10 @@ url = /main/products/fundproduct/{fund_code}/buymethod.shtml
 encode = 0
 parser_type = soup
 data_type = html 
-data_tag = table
-property_name = 
-property_value = 
-soup_index = 1
+data_tag = div
+property_name = class
+property_value = th_bg
+soup_index = 0
 selected_tags =  
 excluded_up_tag =
 excluded_down_tag = 
