--- a/Projects/Python/fund/config/data/013.ini
+++ b/Projects/Python/fund/config/data/013.ini
@@ -1,7 +1,7 @@
 [server]
 domain = www.cmfchina.com 
 sample_code = 217013
-#nodes= info,manager,nav,invest,dividend,roi,charge,files,announcement
+#nodes= info,manager,nav,dividend,roi,charge,files,announcement
 nodes = info
 [info]
 url = /cgi-bin/fundproduct/FundProduct?function=FundCatalog&fundid={fund_code}
