--- a/Projects/Python/fund/config/data/017.ini
+++ b/Projects/Python/fund/config/data/017.ini
@@ -24,6 +24,7 @@ data_index = 0,1,2,3,4,5
 url = /fund/{fund_code}/
 encode = 0
 parser_type= soup
+data_type = html
 data_tag = table
 property_name = class 
 property_value= jjxq 
@@ -41,6 +42,7 @@ data_index = 3,1,7,-1,7,9,15,17,24,-1,27,-1,31,29,-1
 url = /fund/{fund_code}/manager/
 encode = 0
 parser_type= html 
+data_type = html
 data_tag = div
 property_name = class
 property_value= zjdiv_txt
@@ -51,7 +53,7 @@ excluded_up_tag =
 excluded_down_tag = 
 attr_tag = img,src
 multi = 1
-field_count = 3
+field_count = 6
 start_index = 0
 data_index = 0,-1,2,-1,-1,-1
 [nav]
