--- a/Projects/Python/fund/config/update/013.ini
+++ b/Projects/Python/fund/config/update/013.ini
@@ -7,6 +7,7 @@ nodes = info
 url = /cgi-bin/fundproduct/FundProduct?function=FundCatalog&fundid={fund_code}
 encode = 0
 parser_type= html
+data_type = html
 data_tag = table
 property_name = bgcolor
 property_value= #CCCCCC 
@@ -23,7 +24,8 @@ data_index = 0,1,2,3,4,5
 [manager]
 url = 
 encode = 0
-parser_type= soup
+parser_type = soup
+data_type = html
 data_tag = ul
 property_name = class
 property_value= phototext_list
@@ -39,7 +41,7 @@ data_index = 0,1,2
 [nav]
 url = /flagfund_2010/selectFundayByCode.do?pageSize=200&gotoPage=1&fd.fundcode={fund_code} 
 encode = 0
-parser_type= soup
+parser_type = soup
 data_type = html
 data_tag = table 
 property_name = 
@@ -56,8 +58,8 @@ data_index = 0,1,2
 [roi]
 url = /flagfund_2010/{fund_code}/performance.shtml
 encode = 0
-parser_type= soup
-data_type =
+parser_type = soup
+data_type = html
 data_tag = table 
 property_name = class
 property_value= tb_fdcomp1 tdthcenter tbpd3
@@ -73,8 +75,8 @@ data_index = -1,-1,-1,3,-1,-1,4,-1,-1,5
 [charge]
 url = /fund/FundFee/selectFundfee.do?fundcode={fund_code}
 encode = 0
-parser_type= soup
-data_type =
+parser_type = soup
+data_type = html
 data_tag = table
 property_name = 
 property_value= 
@@ -90,7 +92,7 @@ data_index = 0,-1,-1,-1
 [files]
 url = /list/629/{fund_code}/1.shtml
 encode = 0
-parser_type= soup 
+parser_type = soup
 data_type = html
 #1
 data_tag = div
@@ -110,7 +112,7 @@ data_index = 0,1,-1
 [announcement]
 url = /list/630/{fund_code}/1.shtml
 encode = 0
-parser_type= soup 
+parser_type = soup
 data_type = html
 #1
 data_tag = div
