--- a/Projects/Python/fund/config/update/017.ini
+++ b/Projects/Python/fund/config/update/017.ini
@@ -23,7 +23,8 @@ data_index = 0,1,2,3,4,5
 [info]
 url = /fund/{fund_code}/
 encode = 0
-parser_type= soup
+parser_type = soup
+data_type = html
 data_tag = table
 property_name = class 
 property_value= jjxq 
@@ -41,6 +42,7 @@ data_index = 3,1,7,-1,7,9,15,17,24,-1,27,-1,31,29,-1
 url = /fund/{fund_code}/manager/
 encode = 0
 parser_type= html 
+data_type = html
 data_tag = div
 property_name = class
 property_value= zjdiv_txt
@@ -57,7 +59,7 @@ data_index = 0,-1,2,-1,-1,-1
 [nav]
 url = /fund/{fund_code}/nav/
 encode = 0
-parser_type= soup
+parser_type = soup
 data_type = html
 data_tag = table 
 property_name = 
@@ -74,8 +76,8 @@ data_index = 0,1,2
 [charge]
 url = /fund/{fund_code}/fee/
 encode = 0
-parser_type= soup
-data_type =
+parser_type = soup
+data_type = html
 data_tag = table
 property_name = cellpadding
 property_value= 6
